--- a/BlockVIP/Block.conf
+++ b/BlockVIP/Block.conf
@@ -3,5 +3,5 @@ hostname = api.bilibili.com,*.bili*.*, 124.239.240.*, 101.89.57.66, 218.94.210.6
 # > 哔哩哔哩解锁高清
 https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/bilibili/BiliHD.js
 
-# > 哔哩哔哩解锁大会员
-^https?:\/\/ap(i|p)\.bilibili\.com\/bilibili\.\w{3,4}\..+\/(View|PlayView|PlayConf|PlayerOnline|MainList|ViewProgress)$ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.js
+# > 哔哩哔哩解锁大会员 被和谐中
+# ^https?:\/\/ap(i|p)\.bilibili\.com\/bilibili\.\w{3,4}\..+\/(View|PlayView|PlayConf|PlayerOnline|MainList|ViewProgress)$ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.js
