--- a/rewrite/all.conf
+++ b/rewrite/all.conf
@@ -2,10 +2,9 @@
   哔哩哔哩解锁高清
   百度网盘解锁视频在线播放和倍速
   哔哩哔哩解锁大会员（和谐）
-  YouTube 字母插件
 */
 
-hostname = api.bilibili.com, *.bili*.*, 124.239.240.*, 101.89.57.66, 218.94.210.66, 240e:b1:9801:206:11:0:0:*, pan.baidu.com, *.youtube.com
+hostname = api.bilibili.com, *.bili*.*, 124.239.240.*, 101.89.57.66, 218.94.210.66, 240e:b1:9801:206:11:0:0:*, pan.baidu.com
 
 # > 哔哩哔哩解锁高清
 https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/bilibili/BiliHD.js
@@ -15,7 +14,3 @@ https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/
 
 #百度云盘解锁视频在线播放和倍速(by nobyda)
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
-
-# YouTube 字幕插件
-https:\/\/setting.youtube.com\/\?action=(g|s)et url script-analyze-echo-response https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/Dualsub.js
-http:\/\/www.youtube.com\/api\/timedtext.+ url script-request-header https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/Dualsub.js
