--- a/rewrite/all.conf
+++ b/rewrite/all.conf
@@ -1,16 +1,19 @@
 /*
+  ****解锁****
   哔哩哔哩解锁高清
   百度网盘解锁视频在线播放和倍速
-  哔哩哔哩解锁大会员（和谐）
 */
 
-hostname = api.bilibili.com, *.bili*.*, 124.239.240.*, 101.89.57.66, 218.94.210.66, 240e:b1:9801:206:11:0:0:*, pan.baidu.com
+hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com
 
 # > 哔哩哔哩解锁高清
+# mitm: api.bilibili.com
 https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/bilibili/BiliHD.js
 
-# > 哔哩哔哩解锁大会员 被和谐中
-# ^https?:\/\/ap(i|p)\.bilibili\.com\/bilibili\.\w{3,4}\..+\/(View|PlayView|PlayConf|PlayerOnline|MainList|ViewProgress)$ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Script/BiLiBiLiBVIPCrack.js
-
-#百度云盘解锁视频在线播放和倍速(by nobyda)
+# > 百度云盘解锁视频在线播放和倍速---(by nobyda)
+# mitm: pan.baidu.com
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
+
+# > 拦截100解锁超级会员---软件版本: 3.0.2---(by Hausd0rff)
+# mitm: tagit.hyhuo.com
+^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
