--- a/rewrite/all.conf
+++ b/rewrite/all.conf
@@ -1,8 +1,7 @@
-/*
-  ****解锁****
-  哔哩哔哩解锁高清
-  百度网盘解锁视频在线播放和倍速
-*/
+### ****解锁****
+# > 哔哩哔哩解锁高清
+# > 百度网盘解锁视频在线播放和倍速
+# > 拦截100解锁超级会员
 
 hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com
 
