--- a/rewrite/all.conf
+++ b/rewrite/all.conf
@@ -1,4 +1,8 @@
-### ****解锁****
+### ***去广告***
+
+
+
+### ***解锁***
 # > 哔哩哔哩解锁高清
 # > 百度网盘解锁视频在线播放和倍速
 # > 拦截100解锁超级会员
@@ -13,6 +17,7 @@ https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/
 # mitm: pan.baidu.com
 https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
-# > 拦截100解锁超级会员---软件版本: 3.0.2---(by Hausd0rff)
+# > 拦截100解锁超级会员---(by Hausd0rff)
+# 软件版本: 3.0.2
 # mitm: tagit.hyhuo.com
 ^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
