--- a/Scripts/Cookie.conf
+++ b/Scripts/Cookie.conf
@@ -1,1 +1,5 @@
+hostname = script.baertt.com
 
+# 中青阅读分享助力10次
+# mitm: script.baertt.com
+https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://github.com/lonely06/Quanx/blob/main/Scripts/backups/youthShareRead.js
