--- a/Scripts/Cookie.conf
+++ b/Scripts/Cookie.conf
@@ -2,4 +2,4 @@ hostname = script.baertt.com
 
 # 中青阅读分享助力10次
 # mitm: script.baertt.com
-https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://github.com/lonely06/Quanx/blob/main/Scripts/backups/youthShareRead.js
+https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
