--- a/rewrite/VipAndAdvertising.conf
+++ b/rewrite/VipAndAdvertising.conf
@@ -6,8 +6,9 @@
 # > 哔哩哔哩解锁高清
 # > 百度网盘解锁视频在线播放和倍速
 # > 拦截100解锁超级会员
+# > 滴答清单VIP解锁
 
-hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com
+hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -21,3 +22,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 # 软件版本: 3.0.2
 # mitm: tagit.hyhuo.com
 ^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
+
+# > 滴答清单VIP解锁
+# mitm：dida365.com, ticktick.com
+^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/DiDaQingDan.js
