--- a/rewrite/VipAndAdvertising.conf
+++ b/rewrite/VipAndAdvertising.conf
@@ -8,7 +8,7 @@
 # > 拦截100解锁超级会员
 # > 滴答清单VIP解锁
 
-hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com
+hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -26,3 +26,8 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 # > 滴答清单VIP解锁
 # mitm：dida365.com, ticktick.com
 ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/DiDaQingDan.js
+
+
+# > CamScanner 解锁部分高级特权
+# mitm: ap*.intsig.net
+^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
