--- a/rewrite/VipAndAdvertising.conf
+++ b/rewrite/VipAndAdvertising.conf
@@ -8,7 +8,7 @@
 # > 拦截100解锁超级会员
 # > 滴答清单VIP解锁
 
-hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net
+hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net, vira.llsapp.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -31,3 +31,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 # > CamScanner 解锁部分高级特权
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
+
+# > 流利说·阅读(2022.01.16)
+# mitm: vira.llsapp.com
+^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
