Update and rename VipAndAdvertising.conf to UnlockApp.conf

--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -1,6 +1,3 @@
-### ***去广告***
-
-
 
 ### ***解锁***
 # > 哔哩哔哩解锁高清
@@ -28,7 +25,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/DiDaQingDan.js
 
 
-# > CamScanner 解锁部分高级特权
+# > 扫描万能王 解锁部分高级特权
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
 
