--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -53,6 +53,8 @@ server=/dl.l.google.com/119.29.29.29
 static=苹果服务, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 static=全球加速, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
+[server_remote]
+
 [filter_remote]
 
 # 规则修正
