--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -7,7 +7,7 @@
 # > 用于节点延迟测试
 server_check_url= http://www.qualcomm.cn/generate_204
 # > 用于设置图标显示
-profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png
+profile_img_url=https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fa171e72e-2c46-4eb9-9fb2-d7e2135283ae%2F%E8%83%8C%E6%99%AF.png?table=block&id=271ba11b-3276-4e2b-a7e7-39534da03321&spaceId=fd9a7f0b-f2f8-478c-85a4-bd11415070e4&width=250&userId=abe44c67-a3ab-4855-bd65-aec061803561&cache=v2
 # > 用于Check节点IP地址
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 # > 功能强大的解析器，用于引用资源的转换
