--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -76,6 +76,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 
 #获取cookie
 https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/Cookie.conf, tag=GetCookie, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ztxtop/x/main/rewrite-zqread.plugin, tag=ztx中青阅读抓取, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ztxtop/x/main/rewrite-zq.plugin, tag=ztx中青ck, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ztxtop/x/main/rewrite-zqkkz.plugin, tag=zxt看看赚ck, update-interval=172800, opt-parser=true, enabled=true
 
 # 解锁会员
 https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/UnlockApp.conf, tag=自用vip, update-interval=172800, opt-parser=true, enabled=true
