--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -1,11 +1,7 @@
 
 ### ***解锁***
-# > 哔哩哔哩解锁高清
-# > 百度网盘解锁视频在线播放和倍速
-# > 拦截100解锁超级会员
-# > 滴答清单VIP解锁
 
-hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net, vira.llsapp.com
+hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net, vira.llsapp.com, qianji.xxoojoke.com, biz.caiyunapp.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -32,3 +28,11 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 # > 流利说·阅读(2022.01.16)
 # mitm: vira.llsapp.com
 ^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
+
+# > 钱迹（2022-01-25）by ddgksf2013
+# mitm: qianji.xxoojoke.com
+https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/qj.js
+
+# > 彩云天气 （2020-11-21） by ddgksf2013
+# mitm: biz.caiyunapp.com
+https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
