--- a/rewrite/Cookie.conf
+++ b/rewrite/Cookie.conf
@@ -5,7 +5,7 @@ hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, 
 https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
 
 # ztx中青阅读抓取
-https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url http-request https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
+http-request ^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, tag=获取阅读数据
 
 # ztx中青ck
 
