--- a/rewrite/Cookie.conf
+++ b/rewrite/Cookie.conf
@@ -5,17 +5,17 @@ hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, 
 https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
 
 # ztx中青阅读抓取
-http-request ^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, tag=获取阅读数据
+https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
 
 # ztx中青ck
 # 获取阅读所需数据：配置好此重写规则，进入app阅读文章视频，每个文章视频只抓取首次奖励即可换下一个文章视频（单个文章视频的非首次的奖励可通过脚本循环跑时获得），如果频繁提示达上限，请从最后一次阅读开始算起，间隔一天再去抓数据
-http-request ^https?://ios\.baertt\.com/v5/article/complete script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js , requires-body=1, tag=中青阅读数据
+https?://ios\.baertt\.com/v5/article/complete url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
 
 # 获取阅读时长数据：只会抓取超过1分钟阅读时长的数据
-http-request ^https?://ios\.baertt\.com/v5/user/app_stay\.json script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, requires-body=1, tag=中青阅读时长数据
+https?://ios\.baertt\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
 
 # 获取签到所需数据：我的->任务中心
-http-request ^https?://\w+\.youth\.cn/(TaskCenter|WebApi/NewTaskIos)/(sign|getSign)(\?.+)?$ script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, tag=中青签到、宝箱数据
+https?://\w+\.youth\.cn/(TaskCenter|WebApi/NewTaskIos)/(sign|getSign)(\?.+)?$ url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
 
 # zxt看看赚ck
 
