--- a/rewrite/Cookie.conf
+++ b/rewrite/Cookie.conf
@@ -10,12 +10,15 @@ https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\
 # ztx中青ck
 # 获取阅读所需数据：配置好此重写规则，进入app阅读文章视频，每个文章视频只抓取首次奖励即可换下一个文章视频（单个文章视频的非首次的奖励可通过脚本循环跑时获得），如果频繁提示达上限，请从最后一次阅读开始算起，间隔一天再去抓数据
 https?://ios\.baertt\.com/v5/article/complete url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
-
 # 获取阅读时长数据：只会抓取超过1分钟阅读时长的数据
 https?://ios\.baertt\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
-
 # 获取签到所需数据：我的->任务中心
 https?://\w+\.youth\.cn/(TaskCenter|WebApi/NewTaskIos)/(sign|getSign)(\?.+)?$ url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
 
 # zxt看看赚ck
-
+# 浏览赚：任务中心-》看看赚-》顶部的浏览赚-》点任务开始抓到任务数据包即可
+https?://(ios\.baertt|kandian\.wkandian)\.com\/v5\/task/browse_start\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js
+# 看看赚：任务中心-》看看赚-》点看看赚任务抓到任务数据包即可
+https?://(ios\.baertt|kandian\.wkandian)\.com/v5/Nameless/adlickstart\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js
+# 任务中心尝试添加看看赚入口
+https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js
