--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -18,7 +18,7 @@ https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body
 
 # > 滴答清单VIP解锁
 # mitm：dida365.com, ticktick.com
-^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/DiDaQingDan.js
+# ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/DiDaQingDan.js
 
 
 # > 扫描万能王 解锁部分高级特权
