--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -5,7 +5,7 @@ hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, tickti
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
-https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/bilibili/BiliHD.js
+# https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/bilibili/BiliHD.js
 
 # > 百度云盘解锁视频在线播放和倍速---(by nobyda)
 # mitm: pan.baidu.com
