--- a/clash.yaml
+++ b/clash.yaml
@@ -22,7 +22,7 @@ dns:
 proxies:
   # 下面放入你的节点信息（可以多个，认证仔细点！），节点名字支持 🇨🇳 🇭🇰 🇺🇸 🇯🇵 🇰🇷 🇨🇦 🇬🇧 🇩🇪 🇸🇬 🇲🇴 等图标。
   # vmess
-  - name: "vmess"
+  - name: "L"
     type: vmess
     server: server
     port: 443
