--- a/rewrite/Cookie.conf
+++ b/rewrite/Cookie.conf
@@ -2,7 +2,8 @@ hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, 
 
 # 中青阅读分享助力10次
 # mitm: script.baertt.com
-https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
+# https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
+script-request-header https:\/\/script\.baertt\.com\/count2\/callback script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/youthShareRead.js
 
 # ztx中青阅读抓取
 https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/ztxtop/x/main/zqread.js
