进行更新，调整

--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -1,7 +1,7 @@
 
 ### ***解锁***
 
-hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, ticktick.com, ap*.intsig.net, vira.llsapp.com, qianji.xxoojoke.com, biz.caiyunapp.com
+hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -9,30 +9,8 @@ hostname = api.bilibili.com, pan.baidu.com, tagit.hyhuo.com, dida365.com, tickti
 
 # > 百度云盘解锁视频在线播放和倍速---(by nobyda)
 # mitm: pan.baidu.com
-https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
-
-# > 拦截100解锁超级会员---(by Hausd0rff)
-# 软件版本: 3.0.2
-# mitm: tagit.hyhuo.com
-^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
-
-# > 滴答清单VIP解锁
-# mitm：dida365.com, ticktick.com
-# ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/Scripts/backups/DiDaQingDan.js
-
+# https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
 # > 扫描万能王 解锁部分高级特权
 # mitm: ap*.intsig.net
-^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
-
-# > 流利说·阅读(2022.01.16)
-# mitm: vira.llsapp.com
-^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/LiuLiShuoYueDu/Script/LiuLiShuoYueDu.js
-
-# > 钱迹（2022-01-25）by ddgksf2013
-# mitm: qianji.xxoojoke.com
-https?://qianji.xxoojoke.com/(vip/configios|budget/submit) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/qj.js
-
-# > 彩云天气 （2020-11-21） by ddgksf2013
-# mitm: biz.caiyunapp.com
-https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
+^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
