--- a/rewrite/getCookie.conf
+++ b/rewrite/getCookie.conf
@@ -2,8 +2,8 @@ hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, 
 
 # 中青阅读分享助力10次
 # mitm: script.baertt.com
-https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/youthShareRead.js
-# script-request-header https:\/\/script\.baertt\.com\/count2\/callback script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js, requires-body=1, tag=中青分享
+# https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/youthShareRead.js
+script-request-header https:\/\/script\.baertt\.com\/count2\/callback script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js, requires-body=1, tag=中青分享
 
 # ztx中青阅读抓取
 https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/zqread.js
