--- a/rewrite/getCookie.conf
+++ b/rewrite/getCookie.conf
@@ -1,9 +1,9 @@
-hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, ios.baertt.com, kandian.wkandian.com, kd.youth.cn, ios.baertt.com
+hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn
 
 # 中青阅读分享助力10次
 # mitm: script.baertt.com
 https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js
-http-request https:\/\/script\.baertt\.com\/count2\/callback script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js, requires-body=1, tag=中青分享
+# http-request https:\/\/script\.baertt\.com\/count2\/callback script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js, requires-body=1, tag=中青分享
 
 # ztx中青阅读抓取
 https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/zqread.js
@@ -18,10 +18,10 @@ https?://\w+\.youth\.cn/(TaskCenter|WebApi/NewTaskIos)/(sign|getSign)(\?.+)?$ ur
 
 # zxt看看赚ck
 # 浏览赚：任务中心-》看看赚-》顶部的浏览赚-》点任务开始抓到任务数据包即可
-http-request ^https?://(ios\.baertt|kandian\.wkandian)\.com\/v5\/task/browse_start\.json script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青浏览赚
+^https?://(ios\.baertt|kandian\.wkandian)\.com\/v5\/task/browse_start\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 看看赚：任务中心-》看看赚-》点看看赚任务抓到任务数据包即可
-http-request ^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/Nameless/adlickstart\.json script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青看看赚
+^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/Nameless/adlickstart\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 任务中心尝试添加看看赚入口
-http-response ^https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青转发、看看赚入口
+^https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList url script-response-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 已有阅读时长数据时，只保存大于1分钟的时长数据
-http-request ^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/user/app_stay\.json script-path=https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青iOS时长数据
+^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
