--- a/rewrite/getCookie.conf
+++ b/rewrite/getCookie.conf
@@ -1,4 +1,3 @@
-hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, 
 
 # 中青阅读分享助力10次
 # mitm: script.baertt.com
@@ -25,3 +24,5 @@ https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https:
 ^https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList url script-response-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 已有阅读时长数据时，只保存大于1分钟的时长数据
 ^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
+
+hostname = script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn
