--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -1,7 +1,7 @@
 
 ### ***解锁***
 
-hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net
+hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -14,3 +14,5 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net
 # > 扫描万能王 解锁部分高级特权
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
+
+https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js
