--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -15,4 +15,7 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
 
+### ***Cookie***
+# 中青阅读分享助力10次
+# mitm: script.baertt.com
 https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js
