--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -21,7 +21,7 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, i
 https:\/\/script\.baertt\.com\/count2\/callback url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youthShareRead.js
 
 # ztx中青阅读抓取
-# https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/zqread.js
+https?://(ios\.baertt|kandian\.wkandian)\.com/v5/article/(info/get|info|detail)\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/zqread.js
 
 # ztx中青ck
 # 获取阅读所需数据：配置好此重写规则，进入app阅读文章视频，每个文章视频只抓取首次奖励即可换下一个文章视频（单个文章视频的非首次的奖励可通过脚本循环跑时获得），如果频繁提示达上限，请从最后一次阅读开始算起，间隔一天再去抓数据
