--- a/rewrite/UnlockApp.conf
+++ b/rewrite/UnlockApp.conf
@@ -30,10 +30,10 @@ https?://\w+\.youth\.cn/(TaskCenter|WebApi/NewTaskIos)/(sign|getSign)(\?.+)?$ ur
 
 # zxt看看赚ck
 # 浏览赚：任务中心-》看看赚-》顶部的浏览赚-》点任务开始抓到任务数据包即可
-^https?://(ios\.baertt|kandian\.wkandian)\.com\/v5\/task/browse_start\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青浏览赚
+^https?://(ios\.baertt|kandian\.wkandian)\.com\/v5\/task/browse_start\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 看看赚：任务中心-》看看赚-》点看看赚任务抓到任务数据包即可
-^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/Nameless/adlickstart\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青看看赚
+^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/Nameless/adlickstart\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 任务中心尝试添加看看赚入口
-^https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青转发、看看赚入口
+^https://kd\.youth\.cn/WebApi/NewTaskIos/getTaskList url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
 # 已有阅读时长数据时，只保存大于1分钟的时长数据
-^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js, requires-body=1, tag=中青iOS时长数据
+^https?://(ios\.baertt|kandian\.wkandian)\.com/v5/user/app_stay\.json url script-request-header https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/zqkd/youth_banner.js
