--- a/rewrite/myCookie.conf
+++ b/rewrite/myCookie.conf
@@ -1,7 +1,7 @@
 
 ### ***解锁***
 
-hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn
+hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, api.tipsoon.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -14,6 +14,9 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, i
 # > 扫描万能王 解锁部分高级特权
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
+
+# mitm: api.tipsoon.com
+^https?:\/\/api\.tipsoon\.com\/api\/v1\/user\/info url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/JianXunProCrack.js
 
 ### ***Cookie***
 # 中青阅读分享助力10次
