--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -32,8 +32,18 @@ fallback_udp_policy=direct
 no-ipv6
 # DOH
 #doh-server=https://dns.alidns.com/dns-query
+no-system
 
-#wechat
+server=223.5.5.5
+server=223.6.6.6
+server=119.29.29.29
+
+# appstore
+server=/*itunes.apple.com/system
+server=/*testflight.apple.com/8.8.4.4
+server=/*icloud.com/119.29.29.29
+server=/*icloud.com.cn/119.29.29.29
+# wechat
 server=/*qq.com/119.29.29.29
 server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
