--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,9 +1,10 @@
 # lonely自用
 # 更新日志
-# 2022.6.21 初次创建
-# 2022.7.13 精简、优化dns和分流规则
-# 2022.8.28 添加重写
-# 2022.12.1 修改
+# 2022.6.21  初次创建
+# 2022.7.13  精简、优化dns和分流规则
+# 2022.8.28  添加重写
+# 2022.12.1  修改
+# 2022.12.12 修改dns
 
 [general]
 
