--- a/rewrite/myCookie.conf
+++ b/rewrite/myCookie.conf
@@ -1,7 +1,7 @@
 
 ### ***解锁***
 
-hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, api.tipsoon.com
+hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, api.tipsoon.com, biz.caiyunapp.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -15,9 +15,9 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, i
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
 
-# > 简讯
-# mitm: api.tipsoon.com
-^https?:\/\/api\.tipsoon\.com\/api\/v1\/user\/info url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/JianXunProCrack.js
+# > 彩云天气SVIP
+# mitm: biz.caiyunapp.com
+^https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CaiYun.js
 
 ### ***Cookie***
 # 中青阅读分享助力10次
