--- a/rewrite/myCookie.conf
+++ b/rewrite/myCookie.conf
@@ -17,7 +17,7 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, i
 
 # > 彩云天气SVIP
 # mitm: biz.caiyunapp.com
-^https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CaiYun.js
+# ^https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CaiYun.js
 
 ### ***Cookie***
 # 中青阅读分享助力10次
