--- a/rewrite/myCookie.conf
+++ b/rewrite/myCookie.conf
@@ -1,7 +1,7 @@
 
 ### ***解锁***
 
-hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, api.tipsoon.com, biz.caiyunapp.com
+hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, ios.baertt.com, kandian.wkandian.com, *.youth.cn, kandian.wkandian.com, kd.youth.cn, api.tipsoon.com, biz.caiyunapp.com, qianji.xxoojoke.com
 
 # > 哔哩哔哩解锁高清
 # mitm: api.bilibili.com
@@ -14,6 +14,10 @@ hostname = api.bilibili.com, pan.baidu.com, ap*.intsig.net, script.baertt.com, i
 # > 扫描万能王 解锁部分高级特权
 # mitm: ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/lonely06/Quanx/main/rewrite/backups/CamScanner.js
+
+# > 钱迹 vip
+# mitm: qianji.xxoojoke.com
+^https:\/\/qianji\.xxoojoke\.com\/vip\/configios url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/qj.js
 
 # > 彩云天气SVIP
 # mitm: biz.caiyunapp.com
